--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
     "name": "zend/zendframework",
     "description": "Zend Framework 1 composer fork with minimum require_once and include_path",
-    "version": "master-dev",
     "type": "library",
     "keywords": [
         "zf1",
         "zend",
         "zendframework"
     ],
+    "homepage": "https://github.com/cdsinternetagentur/zf1-composer",
+    "license": "BSD-3-Clause",
+    "require": {
+        "php": ">=5.2.4"
+    },
     "include-path": ["library/"],
     "autoload": {
         "psr-0": {"Zend": "library/"}
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.13-dev"
-        }
     }
+    
 }
