new name for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zend/zendframework",
+    "name": "mazelab/zendframework1-min",
     "description": "Zend Framework 1 fork with minimum require_once and include_path",
     "type": "library",
     "keywords": [
@@ -7,7 +7,7 @@
         "zend",
         "zendframework"
     ],
-    "homepage": "https://github.com/cdsinternetagentur/zf1-composer",
+    "homepage": "https://github.com/mazelab/zf1-composer",
     "license": "BSD-3-Clause",
     "require": {
         "php": ">=5.2.11"
@@ -17,7 +17,8 @@
         "psr-0": {"Zend": "library/"}
     },
     "replace": {
-        "zendframework/zendframework1": "1.12.*"
+        "zendframework/zendframework1": "1.12.*",
+        "zend/zendframework": "1.*"
     },
     "conflict": {
         "zendframework/zendframework1": "<1.12"
