--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "zend/zendframework",
-    "description": "Zend Framework 1 composer fork with minimum require_once and include_path",
+    "name": "mazelab/zendframework1-min",
+    "description": "Zend Framework 1 fork with minimum require_once and include_path",
     "type": "library",
     "keywords": [
         "zf1",
         "zend",
         "zendframework"
     ],
-    "homepage": "https://github.com/cdsinternetagentur/zf1-composer",
+    "homepage": "https://github.com/mazelab/zendframework1-min",
     "license": "BSD-3-Clause",
     "require": {
         "php": ">=5.2.4"
@@ -15,6 +15,13 @@
     "include-path": ["library/"],
     "autoload": {
         "psr-0": {"Zend": "library/"}
+    },
+    "replace": {
+        "zendframework/zendframework1": "1.12.*",
+        "zend/zendframework": "1.*"
+    },
+    "conflict": {
+        "zendframework/zendframework1": "<1.12"
     }
-    
+}
 }
