--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr-0": {"Zend_": "library/"}
     },
     "replace": {
-        "zendframework/zendframework1": "1.12.7",
+        "zendframework/zendframework1": "1.12.7"
     },
     "conflict": {
         "zendframework/zendframework1": "<1.12"
